# Templates

./: .clang-format  link_all_templates.py  setup.py  setup_all.py  setup_dev.py  setup_templates.py
basic_cpp/: .gitignore  CMakeLists.txt
basic_cpp/include/: {{name}.hpp
basic_exe/: .clang-format  CMakeLists.txt  CMakePresets.json  conanfile.py
basic_exe/include/: {{name}}.hpp
basic_exe/src/: {{name}}.cpp
basic_exe/tests/: CMakeLists.txt  test_main.cpp
basic_lib/: CMakeLists.txt  CMakePresets.json  conanfile.py
basic_lib/cmake/: {{name}}Config.cmake.in
basic_lib/examples/: CMakeLists.txt  example1.cpp
basic_lib/tests/: test_main.cpp
header_lib/: .clang-format  CMakeLists.txt  conanfile.py
header_lib/examples/: CMakeLists.txt
